@@ -22,6 +22,7 @@ Compatibility:
 - The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
   deprecated. Use the `SCOREP_USER_*` macros instead.
 - Non-LLVM based CCE compilers are no longer supported. Please upgrade.
+- The HIP adapter requires the ROCm SMI library.
 
 Bugfixes:
 
